k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: app-space
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
