k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  namespace: app-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.local
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: test-app-service
                port:
                  number: 8080
